# haystack-tutorials

./: .gitignore  .pre-commit-config.yaml  Contributing.md  FIX_DOCUMENTATION.md  README.md  index.toml  pyproject.toml  requirements.txt  uv.toml
lauras-medium-mods/: qa_pipeline.py
markdowns/: 01_Basic_QA_Pipeline.md  01_build_your_first_question_answering_system.md  02_Finetune_a_model_on_your_data.md  02_build_a_scalable_question_answering_system.md  03_Basic_QA_Pipeline_without_Elasticsearch.md  03_Scalable_QA_Pipeline.md  03_Scalable_QA_System.md  03_finetune_a_reader.md  04_FAQ_style_QA.md  05_Evaluation.md  06_Better_Retrieval_via_Embedding_Retrieval.md  07_RAG_Generator.md  08_Preprocessing.md  09_DPR_training.md  1.md  10.md  10_Knowledge_Graph.md  11.md  11_Pipelines.md  12.md  12_LFQA.md  13.md  13_Question_generation.md  14.md  14_Query_Classifier.md  15.md  15_TableQA.md  16.md  16_Document_Classifier_at_Index_Time.md  17.md  17_Audio.md  18.md  18_GPL.md  19_Basic_multimodal_search_pipeline.md  19_Text_to_Image_search_pipeline_with_MultiModal_Retriever.md  2.md  20_REST_API.md  20_Using_Haystack_with_REST_API.md  21_Customizing_PromptNode.md  21_Prompt_Node.md  (+8 more)
new_tutorials/: 01_build_your_first_question_answering_system.ipynb  01_simplified_qa_pipeline.ipynb  02_build_a_scalable_question_answering_system.ipynb  02_qa_pipeline.ipynb  03_finetune_a_reader.ipynb  04_distill_a_reader.ipynb  04_distilling_a_reader.ipynb  04_distilling_a_reader_model.ipynb
scripts/: full_dc_sync.py  generate_markdowns.py  generate_matrix.py  generate_txt.py  (+1 more)
(+97 files in other folders)
